--- a/style.css
+++ b/style.css
@@ -1,19 +1,27 @@
-body{
+body {
     font-family: 'Tilt Neon', sans-serif;
+    box-sizing: border-box;
+    width: 100vw;
+    background-color: #e1e1e1;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
 header {
     background-color: #1D3C60;
     height: 100px;
     position: fixed;
+    width: 100vw;
     top: 0;
     left: 0;
-    width: 100%;
     display: flex;
+    z-index: 3;
 }
 
 header img {
     height: 80px;
+    width: 80px;
     margin-top: 10px;
     margin-left: auto;
 }
@@ -27,7 +35,7 @@ header h1 {
 }
 
 .adicionarQuizz{
-    margin-top: 120px;
+    margin-top: 140px;
     border: 2px dashed #878d94;
     border-radius: 10px;
     width: 651px;
@@ -59,34 +67,174 @@ header h1 {
     font-family: 'Tilt Neon', sans-serif;
 }
 
-.galeriaDeQuizz {
+.divisaoGaleria {
     margin-top: 100px;
     font-size: 25px;
     margin-left: 50px;
     color: #132437;
+    width: 200px;
+}
+
+.galeriaDeQuizz {
+    display: flex;
+    font-size: 20px;
+    flex-wrap: wrap;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: space-evenly;
+    width: 100vw;
+}
+
+
+.quizz {
+    margin-top: 40px;
+    height: 180px;
+    width: 300px;
+    position: relative;
+    flex-wrap: nowrap;
+    overflow: hidden;
+}
+
+
+.gradient {
+    background: rgb(0,0,0);
+    background: linear-gradient(0deg, rgba(0,0,0,0.8687850140056023) 0%, rgba(0,0,0,0.7343312324929971) 12%, rgba(253,255,255,0) 39%, rgba(253,255,255,0) 87%);
+    position: absolute;
+    z-index: 1;
+    height: 180px;
+    width: 300px;
+    top: 0;
+    left: 0;
+}
+
+
+.quizz p {
+    bottom: 25px;
+    left: 10px;
+    color: #FFF;
+    z-index: 2;
+    position: absolute;
+}
+
+.quizz img {
+    height: 180px;
+    width: 300px;
+    position: absolute;
+    z-index: 0;
+
 }
 
 .pointer:hover {
     cursor: pointer;
 }
 
+.headerQuizz {
+    width: 100vw;
+    height: 200px;
+    margin-top: 100px;
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: -5%;
+    z-index: 0;
+}
 
-@media (max-width: 664px) {
+.headerQuizz p {
+    color: #FFF;
+    font-size: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #0000009e;
+    width: 100vw;
+    height: 201px;
+    overflow: hidden;
+}
+
+.levels {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    height: 800px;
+    background-color: #FFF;
+}
+
+.tituloLevel {
+    width: 90%;
+    height: 100px;
+    margin: 20px auto;
+    top: 20px;
+    position: relative;
+}
+
+
+.tituloLevel p {
+    color: #FFF;
+    font-size: 25px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.imagens {
+    width: 100%;
+    top: 10px;
+    margin: 40px auto;
+    position: relative;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+
+.questao img {
+    width: 350px;
+    height: 250px;
+}
+
+.questao p {
+    text-align: center;
+    margin-top: 10px;
+}
+
+@media (max-width: 1000px) {
+    .questao img {
+        width: 300px;
+        height: 250px;
+    }
+
+    .levels {
+        width: 90%;
+        height: 800px;
+    }
+}
+@media (max-width: 750px) {
 
     header h1 {
         font-size: 50px;
         margin-top: 25px;
     }
-    .adicionarQuizz{
+    .adicionarQuizz{                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                
         width: 400px;
     }
 
     .adicionarQuizz button {
         margin-left: 125px;
     }
+
+    .questao img {
+        width: 200px;
+        height: 150px;
+    }
+
+    .levels {
+        width: 90%;
+        height: 600px;
+    }
 }
 
-@media (max-width: 477px) {
+@media (max-width: 550px) {
 
     header h1 {
         font-size: 40px;
@@ -95,9 +243,48 @@ header h1 {
 
     .adicionarQuizz{
         width: 300px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .adicionarQuizz button {
         margin-left: 75px;
+    }
+
+    .divisaoGaleria { 
+        margin-left: 20px;
+    }
+
+    .galeriaDeQuizz{
+        display: block;
+    }
+    
+    .quizz {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .levels {
+        width: 100%;
+        height: 500px;
+    }
+
+    .tituloLevel {
+        width: 90%;
+        height: 100px;
+        margin: 20px auto;
+    }
+
+    .tituloLevel p {
+        width: 80vw;
+    }
+
+    .imagens {
+        width: 90%;
+    }
+
+    .questao img {
+        width: 150px;
+        height: 100px;
     }
 }
